--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.6.0",
     "react-toastify": "^9.1.1",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -52,7 +53,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.8.0",
-    "gh-pages": "^4.0.0"
+    "@types/react-datepicker": "^4.8.0"
   }
 }
